# repairable-state-discovery

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: final_experiment_matrix.md  final_output_audit.md  final_paper_outline.md  paper_readiness_checklist.md  predictor_method.md
docs/figures/: protocol_overview.mmd
repairable_diffusion/configs/: default.yaml  math500_phase1.yaml  math500_repairability_pilot.yaml  math500_repairability_stage2.yaml  model_profiles.yaml  protocol_phase1.yaml  protocol_repairability_pilot.yaml  protocol_repairability_stage2.yaml
repairable_diffusion/src/: run_ar_baseline.py  run_pipeline.py  run_protocol.py
results/extended_analysis/: extended_repair_analysis.csv  extended_repair_analysis.json  extended_repair_analysis.md  qualitative_examples.json  qualitative_examples.md
results/final_reports/: aggregate_report.json  diffusion_summary.csv
results/generated_configs/: gsm8k_final_ar_llama31_8b.json  gsm8k_final_ar_llama31_8b.yaml  gsm8k_final_ar_qwen25_7b.json  gsm8k_final_ar_qwen25_7b.yaml  math500_ar_llama31_8b.json  (+41 more)
scripts/: build_benchmark_complete_report.sh  build_final_report.sh  build_paper_complete_report.sh  build_submission_report.sh  run_phase1_oracle.sh  run_protocol_phase1.sbatch  run_protocol_phase1.sh  run_protocol_repairability_final.sh  run_protocol_repairability_pilot.sh  run_protocol_repairability_stage2.sh  submit_benchmark_complete_suite.sh  submit_final_suite.sh  submit_followup_reports.sh  submit_paper_complete_suite.sh  submit_submission_ready_suite.sh
tests/: test_dream_backend_tokens.py
(+41 files in other folders)
