[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repairable-state-discovery"
version = "0.1.0"
description = "Repairable state discovery for diffusion reasoning trajectories"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "accelerate==0.34.2",
    "datasets==3.6.0",
    "numpy==1.26.4",
    "PyYAML==6.0.2",
    "scikit-learn==1.5.2",
    "torch==2.1.2",
    "tqdm==4.67.1",
    "transformers==4.49.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["repairable_diffusion*"]
